--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -592,3 +592,51 @@ hr:before{
     display: inline-block;
 }
 .detail-wrap img{width:100%;}
+
+/*logo 11.25*/
+.bottom-window{
+    height: 5rem;
+    width: 100%;
+    background-color: #e63214;
+    opacity: .92;
+    position: fixed;
+    bottom: 0;
+}
+.bottom-img{
+    float:left;
+    padding:0.8rem 1rem 0 1.88rem;
+}
+.bottom-img img{
+    height: 3.58rem;
+    width: 3.58rem;
+}
+.bottom-text{
+    float: left;
+    color: #fff;
+}
+.bottom-text h4 {
+    font-size: 1rem;
+    margin: 0;
+    font-weight: 100;
+    padding-top: 0.3rem;
+    padding-left: 0.3rem;
+}
+.bottom-text h3 {
+    font-size: 1.2rem;
+    margin: 0px;
+    font-weight: 100;
+    line-height: 1.5rem;
+    padding-top: 1.1rem;
+}
+.download-app{
+    text-decoration: none;
+    color: #FFFFFF;
+}
+.bottom-x{
+    float:right;
+    padding:0.4rem;
+}
+.bottom-x img {
+    width: 1.75rem;
+    height: 1.75rem;
+}
